# IODD-Model

./: .clang-format  .clang-tidy  .gitlab-ci-templates.yml  .gitlab-ci.yml  .hspt-cpp  .valgrind_targets.json  CHANGELOG.md  CMakeLists.txt  Doxyfile  README.md  ci-variables.yml  conanfile.py  sonar-project.properties
config/descriptors/: ifm-000178_V1011-20140911-IODD1.1.xml
config/iodds/: ifm-000176_V1011-20140911-IODD1.1.xml  ifm-000177_V1011-20140911-IODD1.1.xml  ifm-000469-20210201-IODD1.1.xml
docs/manual/: main.md
includes/: DeviceDescriptor.hpp  IODevice.hpp  IODeviceDescriptor.hpp  Menu.hpp  Repository.hpp  Serializer.hpp  StandardDefines.hpp
includes/Model/: Condition.hpp  DeviceDescriptor.hpp  Menu.hpp  ProcessDataUnion.hpp  RecordRef.hpp  Unit.hpp  UserInterface.hpp  Variable.hpp  VariableRef.hpp
includes/Model/Datatypes/: Array.hpp  Boolean.hpp  ComplexDatatype.hpp  Datatypes.hpp  Decoders.hpp  Float.hpp  Integer.hpp  OctetString.hpp  ProcessData.hpp  Record.hpp  SimpleDataTypes.hpp  String.hpp  Time.hpp  Timespan.hpp  UInteger.hpp
includes/Model/Datatypes/Primitives/: FixedBitLength.hpp  NamedAttribute.hpp  Number.hpp  TextID.hpp  ValueTypes.hpp
includes/Standard/: Button.hpp  DeviceDescriptor.hpp  Menu.hpp  RecordRef.hpp  Unit.hpp  UserInterface.hpp  Variable.hpp  VariableRef.hpp
includes/Standard/Datatypes/: AccessRights.hpp  Array.hpp  Boolean.hpp  Datatypes.hpp  Float.hpp  Integer.hpp  ProcessDataUnion.hpp  Record.hpp  String.hpp  Timespan.hpp  UInteger.hpp
includes/Standard/Datatypes/Primitives/: FixedBitLength.hpp  NamedAttribute.hpp  Number.hpp  TextID.hpp  ValueTypes.hpp
sources/: CMakeLists.txt
sources/Example/: CMakeLists.txt  main.cpp
sources/Model/: Array.cpp  CMakeLists.txt  Condition.cpp  DeviceDescriptor.cpp  Menu.cpp  Number.cpp  ProcessDataUnion.cpp  Record.cpp  RecordRef.cpp  TextID.cpp  Unit.cpp  UserInterface.cpp  ValueTypes.cpp  Variable.cpp  VariableRef.cpp
sources/Model/Datatypes/: Array.cpp  Boolean.cpp  Datatypes.cpp  Decoders.cpp  ProcessData.cpp  Record.cpp  SimpleDataTypes.cpp  Variable.cpp
sources/Model/Datatypes/Primitives/: NamedAttribute.cpp  Number.cpp  TextID.cpp  ValueTypes.cpp
sources/Parser/: CMakeLists.txt  Repository.cpp  Serializer.cpp  XML_Helper.cpp  XML_Helper.hpp
sources/Parser/Decoders/: DataValueDecoder.cpp  DataValueDecoder.hpp  NumericsDecoder.cpp  NumericsDecoder.hpp  PrimitivesDecoder.cpp  VariablesDecoder.hpp  XML_Helper.hpp
sources/Repo/: CMakeLists.txt  Repository.cpp
sources/Repo/Decoders/: ConditionDecoder.cpp  ConditionDecoder.hpp  DataValueDecoder.cpp  DataValueDecoder.hpp  NumericsDecoder.hpp  PrimitivesDecoder.cpp  PrimitivesDecoder.hpp  ProcessDataDecoder.cpp  ProcessDataDecoder.hpp  UnitDecoder.cpp  UnitDecoder.hpp  UserInterfaceDecoder.cpp  UserInterfaceDecoder.hpp  VariablesDecoder.cpp  VariablesDecoder.hpp  XML_Decoder.cpp  XML_Decoder.hpp  XML_Helper.cpp  XML_Helper.hpp
sources/Runner/: CMakeLists.txt  main.cpp
test_package/: CMakeLists.txt  example.cpp
unit_tests/: CMakeLists.txt
